<resources>
    <string name="app_name">Reserva de Hotel</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register_now">¿No tienes una cuenta? Regístrate ahora</string>
    <string name="hotel_logo">Logo del hotel</string>
    <string name="welcome">Bienvenido</string>
    <string name="logout">Cerrar sesión</string>
    <string name="my_reservations">Mis Reservas</string>
    <string name="new_reservation">Nueva Reserva</string>
    <string name="create_new_reservation">Crear Nueva Reserva</string>
    <string name="hotel_search">Buscar hotel</string>
    <string name="no_reservations">No hay reservas</string>
    <string name="reservation_details">Detalles de la Reserva</string>
    <string name="check_in">Fecha de Entrada</string>
    <string name="check_out">Fecha de Salida</string>
    <string name="guests">Huéspedes</string>
    <string name="select_hotel">Seleccionar Hotel</string>
    <string name="select_room">Seleccionar Habitación</string>
    <string name="room_type">Tipo de Habitación</string>
    <string name="number_of_guests">Número de Huéspedes</string>
    <string name="enter_guests">Introduce número de huéspedes</string>
    <string name="price">Precio</string>
    <string name="status">Estado</string>
    <string name="create_reservation">Crear Reserva</string>
    <string name="cancel_reservation">Cancelar Reserva</string>
    <string name="hotel">Hotel</string>
</resources>